--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.2",
+    "react-scroll-to-bottom": "^4.2.0",
     "socket.io-client": "^4.5.1",
     "stripe": "^10.2.0"
   },
@@ -42,6 +43,7 @@
     "@types/passport-google-oauth2": "^0.1.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/react-scroll-to-bottom": "^4.2.0",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "typescript": "4.7.4"
